<RelativeLayout android:id="@+id/layout_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout android:id="@+id/layout_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText android:id="@+id/phone_number"
            android:hint="@string/phone_number_input_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:id="@+id/layout_message"
        android:layout_below="@id/layout_phone_number"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText android:id="@+id/message"
            android:hint="@string/message_input_hint"
            android:inputType="textMultiLine"
            android:gravity="start|bottom"
            android:minLines="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/btn_open_send_message_app"
        android:layout_below="@id/layout_message"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/open_send_message_app"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/btn_send_message"
        android:layout_below="@id/btn_open_send_message_app"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:text="@string/direct_send_message"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
